# open_shop_map

./: Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yaml  run.sh
angular-frontend/: README.md  angular.json  build.sh  package-lock.json  package.json  tsconfig.app.json
angular-frontend/src/: index.html  styles.scss
angular-frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
angular-frontend/src/app/about/: about.component.html  about.component.scss  about.component.ts
angular-frontend/src/app/map/: basemap.compontent.ts  map.component.html  map.component.scss  map.component.spec.ts  map.component.ts
angular-frontend/src/app/map/clickcontent/: clickcontent.component.html  clickcontent.component.scss  clickcontent.component.spec.ts  clickcontent.component.ts
angular-frontend/src/app/map/editcontent/: editcontent.component.html  editcontent.component.scss  editcontent.component.ts
angular-frontend/src/app/map/editmap/: editmap.component.html  editmap.component.scss  editmap.component.spec.ts  editmap.component.ts
angular-frontend/src/app/map/mapdecorator/: editmapdecorator.ts  mapdecorator.ts  showmapdecorator.ts
angular-frontend/src/app/models/: dto.ts  state.ts
angular-frontend/src/app/service/: config.prod.ts  config.ts  location.service.spec.ts  location.service.ts  places.service.ts  shop.service.spec.ts  shop.service.ts
angular-frontend/src/environments/: environment.prod.ts  environment.ts
rust-backend/: .env  .gitignore  Cargo.toml  build.sh  run.sh
rust-backend/docker/: docker-compose.yaml
rust-backend/migrations/2020-03-20-095851_create_shops/: down.sql  up.sql
rust-backend/migrations/2020-03-30-112355_fuzzy_search/: down.sql  up.sql
rust-backend/src/: error.rs  logging.rs  main.rs  models.rs  rest.rs  schema.rs  valiator.rs  watchdog.rs
(+27 files in other folders)
