[package]
name = "open_street_map_backend"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@fau.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-rt = "1"
actix-web =  {version = "2.0.0", features=["openssl"] }
actix-web-middleware-redirect-https = "1.0.0"
actix-cors = "0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "postgres"] }
diesel-geography = "0.2.0"
diesel_trgm = "0.1.1"
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
futures-util = "0.3"
mime = "0.3.16"
once_cell = "1.3" 
openssl = "0.10"
rumq-client = "0.1.0-alpha.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1" 
slog = "2.5" 
slog-bunyan = "2.2.0"
slog-stdlog = "4.0.0"
sloggers = "0.3"
tokio = "0.2"
tokio-test = "0.2"
trust-dns-resolver = "0.19.3"
url = "2.1.1"
